<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textViewCreateKeyring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/createkeyring"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textViewCreateKeyringMasterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewCreateKeyring"
        android:layout_marginTop="25dp"
        android:text="@string/entermasterpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/editTextCreateKeyringMasterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateKeyringMasterPassword"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewCreateKeyringMasterPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffffff">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCreateKeyringConfirmMasterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateKeyringConfirmMasterPassword"
        android:layout_alignRight="@+id/editTextCreateKeyringMasterPassword"
        android:layout_below="@+id/textViewCreateKeyringConfirmMasterPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textViewCreateKeyringConfirmMasterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateKeyringMasterPassword"
        android:layout_below="@+id/editTextCreateKeyringMasterPassword"
        android:layout_marginTop="25dp"
        android:text="@string/confirmmasterpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textViewCreateKeyringSecurityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateKeyringConfirmMasterPassword"
        android:layout_below="@+id/editTextCreateKeyringConfirmMasterPassword"
        android:layout_marginTop="25dp"
        android:text="@string/securityquestion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/editTextCreateKeyringSecurityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateKeyringSecurityQuestion"
        android:layout_alignRight="@+id/editTextCreateKeyringConfirmMasterPassword"
        android:layout_below="@+id/textViewCreateKeyringSecurityQuestion"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textViewCreateKeyringSecurityAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCreateKeyringSecurityQuestion"
        android:layout_below="@+id/editTextCreateKeyringSecurityQuestion"
        android:layout_marginTop="25dp"
        android:text="@string/securityquestionanswer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff" />

    <EditText
        android:id="@+id/editTextCreateKeyringSecurityAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCreateKeyringSecurityAnswer"
        android:layout_alignRight="@+id/editTextCreateKeyringSecurityQuestion"
        android:layout_below="@+id/textViewCreateKeyringSecurityAnswer"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/buttonCreateKeyring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextCreateKeyringSecurityAnswer"
        android:layout_below="@+id/editTextCreateKeyringSecurityAnswer"
        android:text="@string/done"
        android:onClick="createKeyring"
        android:textColor="#ffffffff" />

</RelativeLayout>
